# django-rest-captcha

./: .gitignore  LICENSE  MANIFEST.in  README.md  Readme.md  pyproject.toml  runtests.py  setup.py  tox.ini
rest_captcha/: __init__.py  captcha.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py
