[tool.poetry]
name = "django-rest-captcha"
version = "0.2.0"
description = "Lightweight version of django-simple-captcha for work with django-rest-framework"
readme = "README.md"
authors = ["evgeny.zuev <zueves@gmail.com>"]
license = "MIT"
packages = [
    {include = "rest_captcha"},
]

[tool.poetry.dependencies]
python = "*"
djangorestframework = "^3.5"
django="*"
Pillow = ">=4.3.0"

[tool.poetry.dev-dependencies]
tox = "^3.5"
